--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style type="text/css">
+            body {background-color:#00CCFF;}
+        </style>
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <img src="https://github.com/hackclub/dinosaurs/raw/master/smart_dinosaur_docs.png">
-        <h1>Prophet Orpheus</h1>
-        <p>Coding Dino</p>
-        <p>Will code for food</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YJVmu6yttiw" frameborder="0" allowfullscreen autoplay></iframe>
+        <p></p><img src="https://github.com/hackclub/dinosaurs/raw/master/smart_dinosaur_docs.png">
+        <h1><Span style="color:#FF0000">Prophet Orpheus</Span></h1>
+        <p> <Span style="color:#990000">Coding Dino</Span></p>
+               <p><a href="https://www.google.com/?client=safari&channel=mac_bm" /> Google</a></p>
+               <p><a href="http://bing.com" /> Bing</a></p>
+                   <p><a href="http://yahoo.com" /> Yahoo</a></p>
+                   
+        <p><Span style="color:#FF6666">Will code for food</span></p>
     </body>
 </html>
